--- a/index.html
+++ b/index.html
@@ -1,12 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+ <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
+    <title>Atividade flexbox</title>
+
+
 </head>
+
 <body>
-    
+    <h1 class="titulo-pagina">Propriedades Flexbox - Parte 1: container</h1>
+    <hr>
+    <h1 class="nome-da-propriedade"> 1- display: ativa o flexbox / identifica a tag que será o container do flexbox</h1>
+    <hr>
+    <h1 class="nome-da-propriedade"> 2- flex-direction - define a direção do eixo principal. Exemplos:</h1>
+    <h2 class="valor-da-propriedade">row</h2>
+    <main class="container-row">
+
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+
+    </main>
+    <main class="container-column">
+
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+
+    </main>
+    <h2 class="valor-da-propriedade">column-reverse</h2>
+    <main class="container-column-reverse">
+
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+
+    </main>
+    <h2 class="valor-da-propriedade">row-reverse</h2>
+    <main class="container-row-reverse">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+    <hr>
+    <h1 class="nome-da-propriedade">3- justify-content: serve para alinhar os objetos no eixo principal
+    </h1>
+    <h2 class="valor-da-propriedade">center</h2>
+    <main class="container-justify-center">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">flex-start</h2>
+    <main class="container-justify-flex-start">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">flex-end</h2>
+    <main class="container-justify-flex-end">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">space-between</h2>
+    <main class="container-justify-space-between">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">space-around</h2>
+    <main class="container-justify-space-around">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
 </body>
+
+<h2 class="valor-da-propriedade">space-evenly</h2>
+    <main class="container-justify-space-evenly">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+    <hr>
+    <h1 class="nome-da-propriedade">4- align-items - alinhar os elementos no eixo perpendicular/secundário
+    </h1>
+    <h2 class="valor-da-propriedade">center</h2>
+    <main class="container-alignitems-center">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">flex-start</h2>
+    <main class="container-alignitems-flex-start">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">flex-end</h2>
+    <main class="container-alignitems-flex-end">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">baseline</h2>
+    <main class="container-alignitems-baseline">
+        <div class="bloco-1-fontes-diferentes"> 1 </div>
+        <div class="bloco-2-fontes-diferentes"> 2 </div>
+        <div class="bloco-3-fontes-diferentes"> 3 </div>
+    </main>
+
+    <h1 class="nome-da-propriedade">5-flex-wrap-serve para decidir se os elementos 
+        irão para a linha de baixo quando chegar ao final do container
+        ou se eles ficarão expremidos
+    </h1>
+    <h2 class="valor-da-propriedade">center</h2>
+    <main class="container-flexwrap-nowrap">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+        <div class="bloco-1"> 4 </div>
+        <div class="bloco-2"> 5 </div>
+        <div class="bloco-3"> 6 </div>
+        <div class="bloco-1"> 7 </div>
+        <div class="bloco-2"> 8 </div>
+        <div class="bloco-3"> 9 </div>
+        <div class="bloco-1"> 10 </div>
+        <div class="bloco-2"> 11 </div>
+        <div class="bloco-3"> 12 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">center</h2>
+    <main class="container-flexwrap-wrap">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+        <div class="bloco-1"> 4 </div>
+        <div class="bloco-2"> 5 </div>
+        <div class="bloco-3"> 6 </div>
+        <div class="bloco-1"> 7 </div>
+        <div class="bloco-2"> 8 </div>
+        <div class="bloco-3"> 9 </div>
+        <div class="bloco-1"> 10 </div>
+        <div class="bloco-2"> 11 </div>
+        <div class="bloco-3"> 12 </div>
+    </main>
+
+    <h2 class="valor-da-propriedade">center</h2>
+    <main class="container-wrap-reverse">
+        <div class="bloco-1"> 1 </div>
+        <div class="bloco-2"> 2 </div>
+        <div class="bloco-3"> 3 </div>
+        <div class="bloco-1"> 4 </div>
+        <div class="bloco-2"> 5 </div>
+        <div class="bloco-3"> 6 </div>
+        <div class="bloco-1"> 7 </div>
+        <div class="bloco-2"> 8 </div>
+        <div class="bloco-3"> 9 </div>
+        <div class="bloco-1"> 10 </div>
+        <div class="bloco-2"> 11 </div>
+        <div class="bloco-3"> 12 </div>
+    </main>
+
+    
+
 </html>
+
